Rebrand System to Voozh with New Color Scheme

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title Loan Masters - Fast & Easy Title Loans</title>
-    <meta name="description" content="Get fast cash with Title Loan Masters. Hassle-free title loans with competitive rates. Apply now and get cash in 30 minutes while keeping your vehicle!" />
+    <title>Voozh - No Hidden Fees, No Late Fees & Not A High Interest Loan</title>
+    <meta name="description" content="Unlock the value of your car with Voozh. Apply now for a low interest title loan and receive a direct deposit in as little as 48 hours—all while in your comfort and driving your vehicle!" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
